# modkit

./: .env  .gitignore  Cargo.toml  capture_img  cross_compile  modkit.db  modkit.service  modkitd.service  readme.md  test_db.db  test_db.db-shm  test_db.db-wal
docs/: Event API.md  Quickstart.md
docs/.obsidian/: workspace.json
examples/: camera.rs  camera_test.rs  contact_sensor_test.rs  gpio.rs  light_test.rs  modkit.rs  rppal_light_test.rs
migrations/: 20230225073004_create_events_table.sql
src/: defaults.rs  lib.rs  main.rs  server.rs  store.rs  watchdog.rs
src/drivers/: camera.rs  contact_sensor.rs  contact_sensor_sim.rs  device.rs  light.rs  mod.rs  watcher.rs
src/model/: bundle.rs  event.rs  mod.rs
src/store/: mod.rs  store_error.rs
src/ws/: event.rs  handlers.rs  mod.rs  ws.rs
