[package]
name = "modkit"
version = "0.1.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "*"