[package]
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
name = "modkit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
env_logger = "0.10.0"
futures = "0.3"
log = "0.4.17"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"]}
thiserror = "1.0"
tokio = {version = "1.21.2", features = ["full"]}
tokio-stream = "0.1.11"
uuid = {version = "1.2", features = ["v4"]}
warp = {version = "0.3", features = ["tls"]}
