[package]
name = "modkit"
version = "0.1.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = "*"
env_logger = "0.9.3"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
warp = "0.3"
futures = "0.3"
uuid = {version = "1.2", features = ["v4"]}
sqlx = {version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls"] }
openssl = { version = "*", features = ["vendored"] }
# TODO: move these into the hardware feature
rppal = "0.14.1"
rascam = "*"

[features]
default = []
# Enabling this feature will get actual data from the hardware
hardware = []